tests/ui/issues/issue-46311.stderr
error: labels cannot use keyword names
  --> $DIR/issue-46311.rs:2:5
   |
LL |     'break: loop {
   |     ^^^^^^

error: aborting due to 1 previous error

